fix: h1 align

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ section {
 }
 
 h1 {
-  text-align: center;
+  text-align: justify;
   font-size: 2.4em;
   font-family: var(--tertiary);
   font-weight: bold;
